--- a/src/App.css
+++ b/src/App.css
@@ -207,12 +207,19 @@ html {
 h1 {
   margin: 0;
 }
+
+.logo {
+max-height: 50rem;
+max-width: 60rem;
+}
+
+
 .hero {
     background-image:
         linear-gradient(to bottom, rgba(231, 157, 99, 0.99), rgba(128, 126, 113, 0.73)),
         url("./assets/header-img.jpg");
     /* width: 100%; */
-    height: 100vh;
+    /* height: 100vh; */
     background-size: cover;
     background-repeat: no-repeat;
     color: #eae7d4;
