--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,4 @@
-/* html {
-    scroll-behavior: smooth;
-}
+/* 
 
 body {
     font-family: 'Montserrat', sans-serif;
@@ -39,12 +37,6 @@ nav, footer {
     border-radius: 0 0 100px 100px;
 }
 
-#intro {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    padding: 10vh;
-}
 
 .name {
     font-weight: bolder;
@@ -169,22 +161,9 @@ form textarea {
     margin-bottom: 1.5rem;
 }
 
-#message {
-    min-height: 10vh;
-}
 
 
-#contact-img {
-    max-height: 15vw;
-    max-width: 15vw;
-}
 
-input.submit {
-    border-radius: 50px;
-}
-.empty{
-    padding: 2vh;
-}
 
 footer{
     display: flex;
@@ -201,38 +180,50 @@ footer{
 
 html {
   box-sizing: border-box;
-  margin: 0;
+  scroll-behavior: smooth;
+}
+
+.hero {
+  background-image: linear-gradient(
+      to bottom,
+      rgba(231, 157, 99, 0.99),
+      rgba(128, 126, 113, 0.73)
+    ),
+    url('./assets/header-img.jpg');
+  background-size: auto auto;
+  background-repeat: no-repeat;
+  color: #eae7d4;
 }
 
 h1 {
   margin: 0;
 }
 
+.intro {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  padding: 10vh;
+}
+
 .logo {
-max-height: 50rem;
-max-width: 60rem;
+  display: block;
+  margin: auto;
+  max-height: 20%;
+  max-width: 30%;
 }
 
-
-.hero {
-    background-image:
-        linear-gradient(to bottom, rgba(231, 157, 99, 0.99), rgba(128, 126, 113, 0.73)),
-        url("./assets/header-img.jpg");
-    /* width: 100%; */
-    /* height: 100vh; */
-    background-size: cover;
-    background-repeat: no-repeat;
-    color: #eae7d4;
-    /* min-height: 50vh; */
-    /* border-radius: 0 0 100px 100px; */
-}
 .socials-group {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .social {
-    width: 2rem;
-    height: 2rem;
-    margin: 1rem;
+  width: 2rem;
+  height: 2rem;
+  margin: 1rem;
+}
+
+.contact-form {
+  text-align: center;
 }
