--- a/src/App.css
+++ b/src/App.css
@@ -205,6 +205,13 @@ h1 {
   max-height: 40%;
 }
 
+.info {
+  margin: auto;
+  text-align: center;
+  max-width: 30rem;
+  padding: 2rem;
+}
+
 .socials-group {
   display: flex;
   justify-content: center;
